Create color for select item in res -> color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,14 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:guidelineUseRtl="false"
+        app:itemHorizontalTranslationEnabled="false"
+        app:itemIconTint="@color/selected_item_color"
+        app:itemTextAppearanceActive="@style/MaterialAlertDialog.Material3.Title.Icon"
+
+        app:itemTextAppearanceInactive="@style/Theme.Material3.DynamicColors.Light"
+        app:itemTextColor="@color/selected_item_color"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
