--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -4,23 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#fff">
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView_ImageCategory"
-        android:layout_width="150dp"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="@id/textView_NameCategory"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/coffee"
+        android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView_NameCategory"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_NameCategory"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:text="TextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textAllCaps="true"
+        android:textSize="14dp"
+        android:textColor="#000"
+        android:layout_marginTop="5dp"
+        android:letterSpacing="0.1"
+        android:text="CAFE TRUYỀN THỐNG"
         app:layout_constraintEnd_toEndOf="@+id/imageView_ImageCategory"
         app:layout_constraintStart_toStartOf="@+id/imageView_ImageCategory"
         app:layout_constraintTop_toBottomOf="@+id/imageView_ImageCategory" />
