--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -2,34 +2,72 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:context=".MainActivity">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView_ImageCategory"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/coffee"
-        android:padding="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView_NameCategory"
-        app:layout_constraintDimensionRatio="1:1"
+        android:id="@+id/imageView_product"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView_TitleProduct"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/coffee_machine" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="2dp"
+        android:layout_height="90dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_product"
+        app:layout_constraintEnd_toEndOf="@+id/imageView_product"
+        app:layout_constraintTop_toTopOf="@+id/imageView_product" />
 
     <TextView
-        android:id="@+id/textView_NameCategory"
-        android:layout_width="0dp"
+        android:id="@+id/textView_TitleProduct"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textAllCaps="true"
-        android:textSize="14dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="Cafe sữa"
         android:textColor="#000"
-        android:layout_marginTop="5dp"
-        android:letterSpacing="0.1"
-        android:text="CAFE TRUYỀN THỐNG"
-        app:layout_constraintEnd_toEndOf="@+id/imageView_ImageCategory"
-        app:layout_constraintStart_toStartOf="@+id/imageView_ImageCategory"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_ImageCategory" />
+        android:textSize="15dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView_product"
+        app:layout_constraintTop_toTopOf="@+id/divider" />
+
+    <TextView
+        android:id="@+id/textView1_PriceSaleProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="20,000 đ"
+        android:textColor="#000"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView_TitleProduct" />
+
+    <TextView
+        android:id="@+id/textView2_PriceProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="26,000 đ"
+        android:layout_marginTop="2dp"
+        android:textSize="12dp"
+        app:layout_constraintEnd_toEndOf="@+id/textView1_PriceSaleProduct"
+        app:layout_constraintTop_toBottomOf="@+id/textView1_PriceSaleProduct" />
+
+    <TextView
+        android:id="@+id/textView3_DescriptionProduct"
+        android:layout_width="212dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:ellipsize="end"
+        android:maxLines="3"
+        android:text="You should type it in strings.xml file itself, not doing it by add button. Otherwise you will get this; in your strings.xml file and underline in your code"
+        android:textSize="11dp"
+        app:layout_constraintStart_toStartOf="@+id/textView_TitleProduct"
+        app:layout_constraintTop_toBottomOf="@+id/textView_TitleProduct" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
