--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -29,11 +29,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_Product"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-
+        android:layout_height="0dp"
+        android:paddingBottom="30dp"
+        android:layout_marginTop="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/recycler_view_Category"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/recycler_view_Category"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_Category"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/item_product" />
 </androidx.constraintlayout.widget.ConstraintLayout>
