--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp">
 
     <ImageView
         android:id="@+id/imageView_product"
@@ -18,7 +20,7 @@
     <View
         android:id="@+id/divider"
         android:layout_width="2dp"
-        android:layout_height="90dp"
+        android:layout_height="70dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="@+id/imageView_product"
         app:layout_constraintEnd_toEndOf="@+id/imageView_product"
@@ -29,7 +31,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
         android:text="Cafe sữa"
         android:textColor="#000"
         android:textSize="15dp"
@@ -52,20 +53,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="26,000 đ"
-        android:layout_marginTop="2dp"
         android:textSize="12dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3_DescriptionProduct"
         app:layout_constraintEnd_toEndOf="@+id/textView1_PriceSaleProduct"
-        app:layout_constraintTop_toBottomOf="@+id/textView1_PriceSaleProduct" />
+        app:layout_constraintTop_toTopOf="@+id/textView3_DescriptionProduct"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView3_DescriptionProduct"
-        android:layout_width="212dp"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:ellipsize="end"
         android:maxLines="3"
         android:text="You should type it in strings.xml file itself, not doing it by add button. Otherwise you will get this; in your strings.xml file and underline in your code"
         android:textSize="11dp"
+        app:layout_constraintBottom_toBottomOf="@+id/divider"
         app:layout_constraintStart_toStartOf="@+id/textView_TitleProduct"
         app:layout_constraintTop_toBottomOf="@+id/textView_TitleProduct" />
 
