Complete create and display cart ** -> implement Serializable in CartProduct.java and Product.java to use startActivity(intent);

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -30,13 +30,56 @@
         android:id="@+id/recycler_view_Product"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingBottom="30dp"
         android:layout_marginTop="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="30dp"
+        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton_Cart"
         app:layout_constraintEnd_toEndOf="@+id/recycler_view_Category"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/recycler_view_Category"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_Category"
         app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/item_product" />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton_Cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="15dp"
+        android:clickable="true"
+        android:elevation="2dp"
+        android:src="@drawable/ic_baseline_shopping_cart_24"
+
+        app:backgroundTint="@color/myButtonColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="35dp"
+        app:tint="@android:color/white" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="-15dp"
+        app:cardBackgroundColor="#7C1D15"
+
+        app:cardCornerRadius="7dp"
+        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton_Cart"
+        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton_Cart"
+        app:layout_constraintStart_toStartOf="@+id/floatingActionButton_Cart">
+
+        <TextView
+            android:id="@+id/textView_Quantity_Icon_Cart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="0"
+            android:textColor="#fff"
+
+            android:textSize="12dp"
+            android:textStyle="bold" />
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
