--- a/app/src/main/res/layout/bottom_diaglog_product_detail.xml
+++ b/app/src/main/res/layout/bottom_diaglog_product_detail.xml
@@ -78,7 +78,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView3_DescriptionProduct_Detail" />
 
             <RadioGroup
-                android:id="@+id/radioButton_Size"
+                android:id="@+id/RadioGroup_Size"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -93,6 +93,7 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
+                    android:checked="true"
 
                     android:background="@drawable/radio_selector_size_of_product"
                     android:button="@android:color/transparent"
