Complete get product order to display in cart and when click on, it will be show bottomSheetDialog with information is chosen

--- a/app/src/main/res/layout/activity_cart_view.xml
+++ b/app/src/main/res/layout/activity_cart_view.xml
@@ -19,7 +19,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="12dp"
+            android:layout_margin="5dp"
 
             >
             <TextView
@@ -27,8 +27,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Danh sách sản phẩm"
+                android:layout_marginStart="16dp"
                 android:textColor="#000"
-                android:textSize="15dp"
+                android:textSize="18dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -67,5 +68,4 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
